--- a/cli3/package.json
+++ b/cli3/package.json
@@ -11,6 +11,7 @@
     "@fancyapps/fancybox": "^3.5.7",
     "axios": "^0.19.0",
     "bootstrap": "^4.3.1",
+    "bootstrap-lightbox": "^0.4.1",
     "bootstrap-vue": "^2.0.0-rc.22",
     "core-js": "^2.6.5",
     "jquery": "^3.4.1",
